[metadata]
name = prometheus-rasdaemon-exporter
description = Export RASDaemon metrics for Prometheus
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sanecz/prometheus-rasdaemon-exporter
author = Lisa Bekdache
author_email = lisa.bekdache@shadow.tech
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: MIT
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
setup_requires =
  setuptools_scm
install_requires =
    prometheus-client>=0.15.0

[options.extras_require]
tests =
    pytest>=6,<7
    pytest-cov
    coverage

[options.packages.find]
exclude=
    tests
    tests.*

[options.entry_points]
console_scripts =
    prometheus-rasdaemon-exporter = prometheus_rasdaemon_exporter.rasdaemon_exporter:main

